feat: make password protection feature configurable in subscription plan
